# debspawn

./: .mypy.ini  .travis.yml  MANIFEST.in  NEWS  README.md  RELEASE  autoformat.sh  debspawn.py  install-sysdata.py  lint.sh  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: python.yml
data/: global.toml.example  install-data.py
data/services/: debspawn-clear-caches.service  debspawn-clear-caches.timer
data/tmpfiles.d/: debspawn.conf
debspawn/: __init__.py  aptcache.py  bootstrap.py  build.py  cli.py  config.py  dsrun  injectpkg.py  maintain.py  nspawn.py  osbase.py  osroot.py  update.py
debspawn/utils/: __init__.py  command.py  env.py  log.py  misc.py  zstd_tar.py
docs/: assemble_man.py  debspawn-build.1.xml  debspawn-create.1.xml  debspawn-delete.1.xml  debspawn-list.1.xml  debspawn-login.1.xml  debspawn-maintain.1.xml  debspawn-run.1.xml  debspawn-update.1.xml  debspawn.1.xml
dsrun/: dsrun.py
tests/: __init__.py  conftest.py  test_create.py  test_cud.py  test_utils.py
